// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a secondary image 1`] = `
Array [
  .c1 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c0 {
  display: block;
}

@media (min-width:768px) {
  .c1 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 56.2%;
  }
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}
</style>

<div
    className="c0 S1"
  >
    <div>
      <div
        className="c1 S1"
      >
        <ArticleImage />
      </div>
    </div>
  </div>,
  <aside />,
]
`;

exports[`2. an inline image 1`] = `
Array [
  .c1 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c0 {
  display: block;
}

@media (min-width:768px) {
  .c1 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 56.2%;
  }
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}
</style>

<div
    className="c0 S1"
  >
    <div>
      <div
        className="c1 S1"
      >
        <ArticleImage />
      </div>
    </div>
  </div>,
  <aside />,
]
`;
